give the subtitles hash id tags

--- a/_posts/python/ipython-notebooks/2015-05-25-ipython-notebooks_index.html
+++ b/_posts/python/ipython-notebooks/2015-05-25-ipython-notebooks_index.html
@@ -74,7 +74,7 @@ tls.embed("https://plot.ly/~streaming-demos/4")</code></pre>
       <section>
           <h2>Sample notebooks</h2>
 
-              <h3 class="even_margin">Plotly IPython Notebook Basics</h3>
+              <h3 id="notebook-basics" class="even_margin">Plotly IPython Notebook Basics</h3>
                 <div class="row">
                   <a href="/python/user-guide/">
                       <div class="alltutcol">
@@ -92,6 +92,16 @@ tls.embed("https://plot.ly/~streaming-demos/4")</code></pre>
                         </div>
                       </div>
                   </a>
+                  <!--
+                  <a href="">
+                      <div class="alltutcol">
+                        <img class="thumbnail" alt="Basic Pandas dataframe plotting with Plotly" src="{{site.staticurl}}/images/ipython-img/3 - ipython pandas.png" >
+                        <div class="titlecenter">
+                              <h5 class="centered">Basic Pandas Dataframe Plotting with Plotly</h5>
+                        </div>
+                      </div>
+                  </a>
+                  -->
                   <a href="https://plot.ly/ipython-notebooks/cufflinks/">
                       <div class="alltutcol">
                         <img class="thumbnail" alt="Cufflinks - Easy Plotting using Plotly and Pandas" src="{{site.staticurl}}/images/ipython-img/4 - ipython cufflinks.png" >
@@ -109,8 +119,34 @@ tls.embed("https://plot.ly/~streaming-demos/4")</code></pre>
                         </div>
                       </div>
                   </a>
+                  <!--
+                  <a href="">
+                      <div class="alltutcol">
+                        <img class="thumbnail" alt="Working with colors in IPython notebook" src="{{site.staticurl}}/images/ipython-img/6 - ipython color lover.png" >
+                        <div class="titlecenter">
+                              <h5 class="centered">Working with Colors in IPython Notebook</h5>
+                        </div>
+                      </div>
+                  </a>
+                  <a href="">
+                      <div class="alltutcol">
+                        <img class="thumbnail" alt="Widget controls in IPython notebook and Plotly" src="{{site.staticurl}}/images/ipython-img/7 - ipython widgets.png" >
+                        <div class="titlecenter">
+                              <h5 class="centered">Widget Controls in IPython Notebook and Plotly</h5>
+                        </div>
+                      </div>
+                  </a>
+                  <a href="">
+                      <div class="alltutcol">
+                        <img class="thumbnail" alt="Custom notebook styling" src="{{site.staticurl}}/images/ipython-img/8 - ipython custom styling.png" >
+                        <div class="titlecenter">
+                              <h5 class="centered">Custom Notebook Styling</h5>
+                        </div>
+                      </div>
+                  </a>
+                -->
                 </div>
-              <h3 class="even_margin">Business intelligence</h3>
+              <h3 id="business-intelligence" class="even_margin">Business intelligence</h3>
                 <div class="row">
                   <a href="https://plot.ly/ipython-notebooks/amazon-redshift/">
                       <div class="alltutcol">
@@ -120,6 +156,24 @@ tls.embed("https://plot.ly/~streaming-demos/4")</code></pre>
                         </div>
                       </div>
                   </a>
+                  <!--
+                  <a href="">
+                      <div class="alltutcol">
+                      <img class="thumbnail" alt="Updating plots with cron jobs" src="{{site.staticurl}}/images/ipython-img/9 - ipython weather.png" >
+                        <div class="titlecenter">
+                              <h5 class="centered">Updating Plots with Cron Jobs</h5>
+                        </div>
+                      </div>
+                  </a>
+                  <a href="">
+                      <div class="alltutcol">
+                        <img class="thumbnail" alt="Generate HTML reports with Python, Pandas, and Plotly" src="{{site.staticurl}}/images/ipython-img/10 - ipython html report.png" >
+                        <div class="titlecenter">
+                              <h5 class="centered">Generate HTML Reports with Python, Pandas, and Plotly</h5>
+                        </div>
+                      </div>
+                  </a>
+                  -->
                   <a href="https://plot.ly/ipython-notebooks/salesforce/">
                       <div class="alltutcol">
                         <img class="thumbnail" alt="Interactive graphing with Salesforce" src="{{site.staticurl}}/images/ipython-img/11 - ipython salesforce.png" >
@@ -138,7 +192,7 @@ tls.embed("https://plot.ly/~streaming-demos/4")</code></pre>
                   </a>
                   <div class="three-column-clear"></div>
                 </div>
-              <h3 class="even_margin">Connecting to Databases and Data Warehouses</h3>
+              <h3 id="connecting-to-databases" class="even_margin">Connecting to Databases and Data Warehouses</h3>
                 <div class="row">
                   <a href="/ipython-notebooks/amazon-redshift/">
                       <div class="alltutcol">
@@ -165,8 +219,18 @@ tls.embed("https://plot.ly/~streaming-demos/4")</code></pre>
                       </div>
                   </a>
                   <div class="three-column-clear"></div>
+                  <!--
+                  <a href="">
+                      <div class="alltutcol">
+                        <img class="thumbnail" alt="Connecting to mySQL with Python, Pandas, and Plotly" src="{{site.staticurl}}/images/ipython-img/15 - ipython graph SQL.png" >
+                        <div class="titlecenter">
+                              <h5 class="centered">Connecting to mySQL with Python, Pandas, and Plotly</h5>
+                        </div>
+                      </div>
+                  </a>
+                -->
                 </div>
-              <h3 class="even_margin">Financial Engineering</h3>
+              <h3 id="financial-engineering" class="even_margin">Financial Engineering</h3>
                 <div class="row">
                   <a href="https://plot.ly/ipython-notebooks/ukelectionbbg/">
                       <div class="alltutcol">
@@ -185,7 +249,7 @@ tls.embed("https://plot.ly/~streaming-demos/4")</code></pre>
                       </div>
                   </a>
                 </div>
-              <h3 class="even_margin">Computational Biology</h3>
+              <h3 id="computational-biology" class="even_margin">Computational Biology</h3>
                 <div class="row">
                   <a href="https://plot.ly/ipython-notebooks/bioinformatics/">
                       <div class="alltutcol">
@@ -213,7 +277,7 @@ tls.embed("https://plot.ly/~streaming-demos/4")</code></pre>
                   </a>
                   <div class="three-column-clear"></div>
                 </div>
-              <h3 class="even_margin">Civic Data</h3>
+              <h3 id="civic-data" class="even_margin">Civic Data</h3>
                 <div class="row">
                   <a href="https://plot.ly/ipython-notebooks/baltimore-vital-signs/">
                       <div class="alltutcol">
@@ -225,12 +289,22 @@ tls.embed("https://plot.ly/~streaming-demos/4")</code></pre>
                   </a>
                   <a href="https://plot.ly/ipython-notebooks/cartodb/">
                       <div class="alltutcol">
-                        <img class="thumbnail" alt="Earthquake Magnitude withCartoDB and Plotly" src="{{site.staticurl}}/images/ipython-img/21 - ipython cartodb.png" >
+                        <img class="thumbnail" alt="Earthquake Magnitude with CartoDB and Plotly" src="{{site.staticurl}}/images/ipython-img/21 - ipython cartodb.png" >
                         <div class="titlecenter">
-                              <h5 class="centered">Earthquake Magnitude withCartoDB and Plotly</h5>
+                              <h5 class="centered">Earthquake Magnitude with CartoDB and Plotly</h5>
                         </div>
                       </div>
                   </a>
+                  <!--
+                  <a href="">
+                      <div class="alltutcol">
+                        <img class="thumbnail" alt="Reading from the open-data Socrata API" src="{{site.staticurl}}/images/ipython-img/22 - ipython socrata.png" >
+                        <div class="titlecenter">
+                              <h5 class="centered">Reading from the Open-Data Socrata API</h5>
+                        </div>
+                      </div>
+                  </a>
+                  -->
                   <a href="/python/heatmaps-contours-and-2dhistograms-tutorial/">
                       <div class="alltutcol">
                         <img class="thumbnail" alt="Analyzing Montreal's 2013 bikeshare data" src="{{site.staticurl}}/images/ipython-img/23 - ipython heatmap contours.png" >
@@ -241,7 +315,7 @@ tls.embed("https://plot.ly/~streaming-demos/4")</code></pre>
                   </a>
                   <div class="three-column-clear"></div>
                 </div>
-              <h3 class="even_margin">Dynamics, Controls, and Aerospace Engineering</h3>
+              <h3 id="aerospace-engineering" class="even_margin">Dynamics, Controls, and Aerospace Engineering</h3>
                 <div class="row">
                   <a href="https://plot.ly/ipython-notebooks/aircraft-pitch-analysis-matlab-plotly/">
                       <div class="alltutcol">
@@ -260,6 +334,7 @@ tls.embed("https://plot.ly/~streaming-demos/4")</code></pre>
                       </div>
                   </a>
                 </div>
+                <!--
               <h3 class="even_margin">Research and Development</h3>
                 <div class="row">
                   <a href="http://gvallver.perso.univ-pau.fr/notebook/bandDiagram.html">
@@ -271,7 +346,8 @@ tls.embed("https://plot.ly/~streaming-demos/4")</code></pre>
                       </div>
                   </a>
                 </div>
-              <h3 class="even_margin">Plotly and matplotlib</h3>
+              -->
+              <h3 id="ipython-matlpotlib" class="even_margin">Plotly and matplotlib</h3>
                 <div class="row">
                   <a href="/python/matplotlib-to-plotly-tutorial/">
                       <div class="alltutcol">
