--- a/_posts/python/bubble-maps/2015-06-29-bubble-map.html
+++ b/_posts/python/bubble-maps/2015-06-29-bubble-map.html
@@ -14,7 +14,7 @@ import pandas as pd
 df = pd.read_csv('https://raw.githubusercontent.com/plotly/datasets/master/2014_us_cities.csv')
 df.head()
 
-df['text'] = df['name'] + '<br>Population ' + (df['pop']/1e6).astype(str)+' million'
+df['text'] = df['name'] + '&lt;br&gt;Population ' + (df['pop']/1e6).astype(str)+' million'
 limits = [(0,2),(3,10),(11,20),(21,50),(50,3000)]
 colors = ["rgb(0,116,217)","rgb(255,65,54)","rgb(133,20,75)","rgb(255,133,27)","rgb(255,220,0)"]
 cities = []
