made section self-ref link

--- a/_posts/python/ipython-notebooks/2015-05-25-ipython-notebooks_index.html
+++ b/_posts/python/ipython-notebooks/2015-05-25-ipython-notebooks_index.html
@@ -74,7 +74,7 @@ tls.embed("https://plot.ly/~streaming-demos/4")</code></pre>
       <section>
           <h2>Sample notebooks</h2>
 
-              <h3 id="notebook-basics" class="even_margin">Plotly IPython Notebook Basics</h3>
+              <h3 id="notebook-basics" class="even_margin"><a class="no_underline plot-blue" href="#notebook-basics">Plotly IPython Notebook Basics</a></h3>
                 <div class="row">
                   <a href="/python/user-guide/">
                       <div class="alltutcol">
@@ -146,7 +146,7 @@ tls.embed("https://plot.ly/~streaming-demos/4")</code></pre>
                   </a>
                 -->
                 </div>
-              <h3 id="business-intelligence" class="even_margin">Business intelligence</h3>
+              <h3 id="business-intelligence" class="even_margin"><a class="no_underline plot-blue" href="#business-intelligence">Business intelligence</a></h3>
                 <div class="row">
                   <a href="https://plot.ly/ipython-notebooks/amazon-redshift/">
                       <div class="alltutcol">
@@ -192,7 +192,7 @@ tls.embed("https://plot.ly/~streaming-demos/4")</code></pre>
                   </a>
                   <div class="three-column-clear"></div>
                 </div>
-              <h3 id="connecting-to-databases" class="even_margin">Connecting to Databases and Data Warehouses</h3>
+              <h3 id="connecting-to-databases" class="even_margin"><a class="no_underline plot-blue" href="#connecting-to-databases">Connecting to Databases and Data Warehouses</a></h3>
                 <div class="row">
                   <a href="/ipython-notebooks/amazon-redshift/">
                       <div class="alltutcol">
@@ -230,7 +230,7 @@ tls.embed("https://plot.ly/~streaming-demos/4")</code></pre>
                   </a>
                 -->
                 </div>
-              <h3 id="financial-engineering" class="even_margin">Financial Engineering</h3>
+              <h3 id="financial-engineering" class="even_margin"><a class="no_underline plot-blue" href="#financial-engineering">Financial Engineering</a></h3>
                 <div class="row">
                   <a href="https://plot.ly/ipython-notebooks/ukelectionbbg/">
                       <div class="alltutcol">
@@ -249,7 +249,7 @@ tls.embed("https://plot.ly/~streaming-demos/4")</code></pre>
                       </div>
                   </a>
                 </div>
-              <h3 id="computational-biology" class="even_margin">Computational Biology</h3>
+              <h3 id="computational-biology" class="even_margin"><a class="no_underline plot-blue" href="#computational-biology">Computational Biology</a></h3>
                 <div class="row">
                   <a href="https://plot.ly/ipython-notebooks/bioinformatics/">
                       <div class="alltutcol">
@@ -277,7 +277,7 @@ tls.embed("https://plot.ly/~streaming-demos/4")</code></pre>
                   </a>
                   <div class="three-column-clear"></div>
                 </div>
-              <h3 id="civic-data" class="even_margin">Civic Data</h3>
+              <h3 id="civic-data" class="even_margin"><a class="no_underline plot-blue" href="#civic-data">Civic Data</a></h3>
                 <div class="row">
                   <a href="https://plot.ly/ipython-notebooks/baltimore-vital-signs/">
                       <div class="alltutcol">
@@ -315,7 +315,7 @@ tls.embed("https://plot.ly/~streaming-demos/4")</code></pre>
                   </a>
                   <div class="three-column-clear"></div>
                 </div>
-              <h3 id="aerospace-engineering" class="even_margin">Dynamics, Controls, and Aerospace Engineering</h3>
+              <h3 id="aerospace-engineering" class="even_margin"><a href="#civic-data" class="no_underline plot-blue">Dynamics, Controls, and Aerospace Engineering</a></h3>
                 <div class="row">
                   <a href="https://plot.ly/ipython-notebooks/aircraft-pitch-analysis-matlab-plotly/">
                       <div class="alltutcol">
@@ -347,7 +347,7 @@ tls.embed("https://plot.ly/~streaming-demos/4")</code></pre>
                   </a>
                 </div>
               -->
-              <h3 id="ipython-matplotlib" class="even_margin">Plotly and matplotlib</h3>
+              <h3 id="ipython-matplotlib" class="even_margin"><a class="no_underline plot-blue" href="#ipython-matplotlib">Plotly and matplotlib</a></h3>
                 <div class="row">
                   <a href="/python/matplotlib-to-plotly-tutorial/">
                       <div class="alltutcol">
