--- a/_posts/plotly_js/contour/2015-04-09-contour_plotly_js_index.html
+++ b/_posts/plotly_js/contour/2015-04-09-contour_plotly_js_index.html
@@ -2,7 +2,7 @@
 title: Javascript Graphing Library Contour Plots | Examples | Plotly
 name: Contour Plots
 permalink: javascript-graphing-library/contour-plots/
-description: How to make a contour plot in {language}. {num_categories} examples of contour plots of matrices with subplots, custom color-scales, and smoothing.
+description: How to make a contour plot in {{language}}. Examples of contour plots of matrices with subplots, custom color-scales, and smoothing.
 layout: base
 thumbnail: /images/contour.png
 language: plotly_js
