--- a/_posts/python/streamline/2015-07-13-streamline-source-plot.html
+++ b/_posts/python/streamline/2015-07-13-streamline-source-plot.html
@@ -21,12 +21,12 @@ y_start, y_end = -1.0, 1.0
 x = np.linspace(x_start, x_end, N)
 y = np.linspace(y_start, y_end, N)
 X, Y = np.meshgrid(x, y)
-ss = 5.0
+source_strength = 5.0
 x_source, y_source = -1.0, 0.0
 
 # Compute the velocity field on the mesh grid
-u_source = ss/(2*np.pi) * (X-x_s)/((X-x_s)**2 + (Y-y_s)**2)
-v_source = ss/(2*np.pi) * (Y-y_s)/((X-x_s)**2 + (Y-y_s)**2)
+u_source = source_strength/(2*np.pi) * (X-x_s)/((X-x_s)**2 + (Y-y_s)**2)
+v_source = source_strength/(2*np.pi) * (Y-y_s)/((X-x_s)**2 + (Y-y_s)**2)
 
 # Create streamline
 streamline = tls.TraceFactory.create_streamline(x, y, 
