@aneda minor name update

--- a/_posts/python/contour/2015-06-23-contour-connectgaps.html
+++ b/_posts/python/contour/2015-06-23-contour-connectgaps.html
@@ -1,5 +1,5 @@
 ---
-name: Connect the Gaps between Data for Contour Plot
+name: Connect the Gaps Between None Values in the Z Matrix
 plot_url: https://plot.ly/~neda/5138
 language: python
 suite: contour
