--- a/_posts/user_guide_python/2015-05-27-streaming-tutorial.html
+++ b/_posts/user_guide_python/2015-05-27-streaming-tutorial.html
@@ -1,8 +1,6 @@
 ---
 permalink: python/streaming-tutorial/
-redirect_from:
-  - python/streaming/
-description: A User Guide for Plotly and its Python API Library
+description: How to create python graphs that update online in real-time.
 name: Streaming | Python User Guide | Plotly
 layout: user-guide
 thumbnail: /images/static-image.png
