--- a/_posts/matlab/redirects/2015-07-15-streaming.html
+++ b/_posts/matlab/redirects/2015-07-15-streaming.html
@@ -1,5 +1,4 @@
 ---
 permalink: matlab/streaming/
-redirect_to:
-  - http://plot.ly/matlab/streaming-tutorial/
+redirect_to: http://plot.ly/matlab/streaming-tutorial/
 ---
