--- a/_posts/python/redirects/2015-07-15-streaming.html
+++ b/_posts/python/redirects/2015-07-15-streaming.html
@@ -1,5 +1,4 @@
 ---
 permalink: python/streaming/
-redirect_to:
-  - http://plot.ly/python/streaming-tutorial/
+redirect_to: http://plot.ly/python/streaming-tutorial/
 ---
