--- a/_posts/ggplot2/geom_point/2015-07-13-hollow-circles.html
+++ b/_posts/ggplot2/geom_point/2015-07-13-hollow-circles.html
@@ -1,9 +1,9 @@
 ---
-name: Basic Scatter Chart Inspired By Winston Chang's [Cookbook](http://www.cookbook-r.com/Graphs/Scatterplots_(ggplot2)/)
+name: Scatter Chart 
 plot_url: https://plot.ly/~MattSundquist/16654
 language: ggplot2
 suite: geom_point
-description: Want to see a feature added to the library? Write to feedback@plot.ly or submit an issue on [rOpenSci](https://github.com/ropensci/plotly/issues). We'd love to hear your ideas. See the [ggplot2 → plotly test tables](http://ropensci.github.io/plotly-test-table/tables/0e3d5ca144d27d8416318824c1b6ec1421a51045/index.html) for current ggplot2 conversion coverage.
+description: Our docs are inspired by <a href="http://www.cookbook-r.com/Graphs/Scatterplots_(ggplot2)/">Winston Chang's Cookbook</a>. Write feedback@plot.ly with questions or  <a href="https://github.com/ropensci/plotly/issues">submit an issue</a>. See the <a href="http://ropensci.github.io/plotly-test-table/tables/0e3d5ca144d27d8416318824c1b6ec1421a51045/index.html">ggplot2 → plotly test tables</a> for ggplot2 conversion coverage.
 order: 1
 ---
 # Learn about API authentication here: https://plot.ly/ggplot2/getting-started
