unify site.url and rm conflicting site.baseurl

--- a/_posts/2015-04-05-r-index.html
+++ b/_posts/2015-04-05-r-index.html
@@ -14,7 +14,7 @@ language: r
 	</div>
 	<div class="tipbox row">
 		<img src="{{site.staticurl}}/images/ggplot.png" class="api-thum-img" alt="ggplot2 logo">
-	    <p>Are you a <strong>ggplot2</strong> user? Great! You can create interactive plotly figures with the ggplot2 syntax that you know and love. Check out <a href="{{ site.baseurl }}/ggplot2/">our ggplot2 figure converter page</a> for examples and documentation!<p>
+	    <p>Are you a <strong>ggplot2</strong> user? Great! You can create interactive plotly figures with the ggplot2 syntax that you know and love. Check out <a href="{{ site.url }}/ggplot2/">our ggplot2 figure converter page</a> for examples and documentation!<p>
 	</div>
 		<p>Want to see a feature added to the library? <a href="mailto:feedback@plot.ly">Get in touch!</a> We'd love to hear your ideas.</p>
 
