--- a/_posts/python/getting-started/2015-05-25-getting-started_python_index.html
+++ b/_posts/python/getting-started/2015-05-25-getting-started_python_index.html
@@ -41,7 +41,7 @@ data = Data([trace0, trace1])
 unique_url = py.plot(data, filename = 'basic-line')</code></pre>
 
             <p >
-                You can also create plotly graphs with <strong>matplotlib</strong> syntax. Learn more in our <a href="{{ site.baseurl }}/matplotlib/">matplotlib documentation</a>.
+                You can also create plotly graphs with <strong>matplotlib</strong> syntax. Learn more in our <a href="{{ site.url }}/matplotlib/">matplotlib documentation</a>.
             </p>
             <p >
                 You can also create plotly graphs within an <strong>IPython
