--- a/_posts/python/ipython-notebooks/2015-05-25-ipython-notebooks_index.html
+++ b/_posts/python/ipython-notebooks/2015-05-25-ipython-notebooks_index.html
@@ -13,7 +13,7 @@ has_thumbnail: false
 <h1>Plotly for IPython Notebooks</h1>
     <h2>Getting started</h2>
     <p>
-        Instructions on how to install Plotly's Python package can be found on the <a class="no_underline plot-blue" href="{{ site.baseurl }}/python/getting-started">Plotly for Python getting started page</a>.
+        Instructions on how to install Plotly's Python package can be found on the <a class="no_underline plot-blue" href="{{ site.url }}/python/getting-started">Plotly for Python getting started page</a>.
     </p>
 
     <section class="section">
