rename to geom_bar

--- a/_posts/ggplot2/bar/2015-07-14-geom_bar_ggplot2_index.html
+++ b/_posts/ggplot2/bar/2015-07-14-geom_bar_ggplot2_index.html
@@ -1,8 +1,8 @@
 ---
-title: ggplot2 Bar Charts | Examples | Plotly
+title: ggplot2 Geom Bar | Examples | Plotly
 name: Bar Charts
-permalink: ggplot2/bar-charts/
-description: How to make a bar chart in ggplot2. Seven examples of grouped, stacked, overlaid, and colored bar charts.
+permalink: ggplot2/geom_bar/
+description: How to make a bar chart in ggplot2. Examples of grouped, stacked, overlaid, and colored bar charts.
 layout: base
 thumbnail: /images/bar.png
 language: ggplot2
