adding basic bar chart

--- a/_posts/ggplot2/bar/2015-04-09-gg-basic-bar.html
+++ b/_posts/ggplot2/bar/2015-04-09-gg-basic-bar.html
@@ -1,8 +1,9 @@
 ---
-name: ggplot2 Bar Chart
-plot_url: https://plot.ly/~PlotBot/139
+name: ggplot2 Basic Bar Chart
+plot_url: https://plot.ly/~MattSundquist/16825/
 language: ggplot2
 suite: bar
+description: Our docs are inspired by <a href="http://www.cookbook-r.com/Graphs/Scatterplots_(ggplot2)/">Winston Chang's Cookbook</a>. Write feedback@plot.ly with questions or  <a href="https://github.com/ropensci/plotly/issues">submit an issue</a>. See the <a href="http://ropensci.github.io/plotly-test-table/tables/0e3d5ca144d27d8416318824c1b6ec1421a51045/index.html">ggplot2 → plotly test tables</a> for ggplot2 conversion coverage.
 order: 10
 sitemap: false
 ---
@@ -11,15 +12,14 @@ library(plotly)
 # Learn about API authentication here: https://plot.ly/r/getting-started
 # Find your api_key here: https://plot.ly/settings/api
 
-# Consider the following data frame
-researchers &lt;- data.frame(
-  country = c("Canada", "Canada", "Germany", "USA"),
-  name    = c("Warren", "Andreanne", "Stefan", "Toby"),
-  papers  = c(23, 14, 37, 20),
-  field   = c("Math", "Bio", "Bio", "Math"))
+dat <- data.frame(
+    time = factor(c("Lunch","Dinner"), levels=c("Lunch","Dinner")),
+    total_bill = c(14.89, 17.23)
+)
 
-# Let us plot the number of papers (y) per name (x)
-plt &lt;- ggplot(researchers, aes(x = name, y = papers)) + geom_bar(stat = "identity")
+library(ggplot2)
 
-out &lt;- py$ggplotly(plt)
-plotly_url &lt;- out$response$url
+ggplot(data=dat, aes(x=time, y=total_bill)) +
+    geom_bar(stat="identity")
+
+py$ggplotly()
