--- a/_posts/matlab/3d-ribbon/3d-ribbon-index.html
+++ b/_posts/matlab/3d-ribbon/3d-ribbon-index.html
@@ -10,5 +10,5 @@ page_type: example_index
 has_thumbnail: true
 display_as: 3d_charts
 ---
-{% assign examples = site.posts | where:"language","matlab" | where:"suite","3d-line" | sort: "order" %}
+{% assign examples = site.posts | where:"language","matlab" | where:"suite","3d-ribbon" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
