--- a/_posts/python/subplots/2015-06-24-make-subplots-shared-xaxes.html
+++ b/_posts/python/subplots/2015-06-24-make-subplots-shared-xaxes.html
@@ -4,6 +4,7 @@ plot_url: https://plot.ly/~neda/1066/stacked-subplots-with-shared-x-axes/
 language: python
 suite: subplots
 order: 6
+sitemap: false
 ---
 # Learn about API authentication here: https://plot.ly/python/getting-started
 # Find your api_key here: https://plot.ly/settings/api
