--- a/_posts/ggplot2/facets/2015-04-09-facet_wrap.html
+++ b/_posts/ggplot2/facets/2015-04-09-facet_wrap.html
@@ -1,20 +1,18 @@
 ---
-name: Simple <code>facet_wrap</code> Example
-plot_url: https://plot.ly/~PlotBot/178
+name: Sample Data 
+plot_url: https://plot.ly/~MattSundquist/16877/
 language: ggplot2
 suite: facets
-order: 0
+description: Our docs are inspired by <a href="http://www.cookbook-r.com/Graphs/Scatterplots_(ggplot2)/">Winston Chang's Cookbook</a>. Write feedback@plot.ly with questions or  <a href="https://github.com/ropensci/plotly/issues">submit an issue</a>. See the <a href="http://ropensci.github.io/plotly-test-table/tables/0e3d5ca144d27d8416318824c1b6ec1421a51045/index.html">ggplot2 → plotly test tables</a> for ggplot2 conversion coverage.
+order: 1
 sitemap: false
 ---
-library(plotly)
-require(lattice)
-
-# Learn about API authentication here: https://plot.ly/r/getting-started
+# Learn about API authentication here: https://plot.ly/ggplot2/getting-started
 # Find your api_key here: https://plot.ly/settings/api
 
-w &lt;- ggplot(data=barley, aes(x=yield, y=variety, color=year)) +
-  geom_point() +
-  facet_wrap(~site)
+library(reshape2)
+library(plotly)
 
-out &lt;- py$ggplotly(w)
-plotly_url &lt;- out$response$url
+sp <- ggplot(tips, aes(x=total_bill, y=tip/total_bill)) + geom_point(shape=1)
+
+py$ggplotly()
