add sitemap: false to a few more pages

--- a/_posts/matlab/3d-line/2015-07-14-plot3.html
+++ b/_posts/matlab/3d-line/2015-07-14-plot3.html
@@ -4,6 +4,7 @@ plot_url: https://plot.ly/~jackp/9205/
 language: matlab
 suite: 3d-line
 order: 0
+sitemap: false
 ---
 [X1,Y1]= meshgrid(-5:.2:5,-5:.2:5);
 syms x y
