--- a/_posts/matlab/3d-scatter/2015-07-15-scatter3.html
+++ b/_posts/matlab/3d-scatter/2015-07-15-scatter3.html
@@ -4,6 +4,7 @@ plot_url: https://plot.ly/~chelsea_lyn/4351
 language: matlab
 suite: 3d-scatter
 order: 0
+sitemap: false
 ---
 [X,Y,Z] = sphere(16);
 x = [0.5*X(:); 0.75*X(:); X(:)];
