--- a/_posts/matlab/stem-plots/2015-07-15-stem.html
+++ b/_posts/matlab/stem-plots/2015-07-15-stem.html
@@ -4,6 +4,7 @@ plot_url: https://plot.ly/~chelsea_lyn/1132/
 language: matlab
 suite: stem-plots
 order: 0
+sitemap: false
 ---
 fig = figure;
 X = linspace(0,2*pi,50)';
