--- a/_posts/matlab/3d-surface/2015-07-14-3d-polar-coords.html
+++ b/_posts/matlab/3d-surface/2015-07-14-3d-polar-coords.html
@@ -4,6 +4,7 @@ plot_url: https://plot.ly/~chelsea_lyn/840/
 language: matlab
 suite: 3d-surface
 order: 1
+sitemap: false
 ---
 %Add a grid of polar coordinates 
 theta = (0:5:360)*pi/180;
