--- a/_posts/matlab/3d-surface/2015-07-14-klein-bottle.html
+++ b/_posts/matlab/3d-surface/2015-07-14-klein-bottle.html
@@ -4,6 +4,7 @@ plot_url: https://plot.ly/~jackp/1790
 language: matlab
 suite: 3d-surface
 order: 2
+sitemap: false
 ---
 Download kleinBottle.m from <a href="http://www.mathworks.com/matlabcentral/fileexchange/5880-klein-bottle/content//kleinBottle.m" target="_blank">MATLAB File Exchange</a>
 
