--- a/_posts/matlab/3d-surface/2015-07-14-matlab-peak-function.html
+++ b/_posts/matlab/3d-surface/2015-07-14-matlab-peak-function.html
@@ -4,6 +4,7 @@ plot_url: https://plot.ly/~jackp/9185/
 language: matlab
 suite: 3d-surface
 order: 0
+sitemap: false
 ---
 [X,Y,Z] = peaks(25);
 figure
