--- a/_posts/python/subplots/2015-06-23-make-subplots-shared-yaxes.html
+++ b/_posts/python/subplots/2015-06-23-make-subplots-shared-yaxes.html
@@ -4,6 +4,7 @@ plot_url: https://plot.ly/~neda/5875/multiple-subplots-with-shared-y-axes/
 language: python
 suite: subplots
 order: 3
+sitemap: false
 ---
 # Learn about API authentication here: https://plot.ly/python/getting-started
 # Find your api_key here: https://plot.ly/settings/api
