--- a/_posts/ggplot2/facets/2015-07-15-regression-line-facet-grid.html
+++ b/_posts/ggplot2/facets/2015-07-15-regression-line-facet-grid.html
@@ -1,6 +1,6 @@
 ---
 name: regression line with facet_grid 
-plot_url: https://plot.ly/~MattSundquist/17121
+plot_url: https://plot.ly/~MattSundquist/17156
 language: ggplot2
 suite: facets
 description: Inspired by <a href="http://stackoverflow.com/questions/12572035/adding-a-regression-line-to-a-facet-grid-with-qplot-in-r">Stack Overflow</a>.
@@ -20,6 +20,6 @@ df <- data.frame(cbind(x,y))
 df$f1 <- f1
 df$f2 <- f2
 
-ggplot(df,aes(x=x,y=y))+geom_point()+facet_grid(f1~f2)+stat_smooth(method="lm",se=FALSE)
+ggplot(df,aes(x=x,y=y))+geom_point()+facet_grid(f1~f2)+stat_smooth(method="lm")
 
 py$ggplotly()
