--- a/_posts/ggplot2/geom_point/2015-07-13-geom_point_ggplot2_index.html
+++ b/_posts/ggplot2/geom_point/2015-07-13-geom_point_ggplot2_index.html
@@ -2,7 +2,7 @@
 title: ggplot2 Geom Point | Examples | Plotly
 name: geom_point
 permalink: ggplot2/geom_point/
-description: How to make a bar chart in ggplot2. Seven examples of grouped, stacked, overlaid, and colored bar charts.
+description: How to make a scatter chart in ggplot2. Examples of scatter charts and line charts with fits and regressions.
 layout: base
 thumbnail: images/line_exclusive.png
 language: ggplot2
