--- a/index.html
+++ b/index.html
@@ -36,8 +36,11 @@ permalink: /api/
 
 
 	<div class="api-splash row" id="herobanner">
-		<h1 class="white">Plotly API libraries</h1>
-		<h4 class="white">D3.js plots and dashboards for Python, MATLAB, R and more</h4>
+		<div class="api-splash-mute"></div>
+		<div style="position: absolute; width: 100%; top: 10%;">
+			<h1 class="white">Plotly API libraries</h1>
+			<h3>D3 plots and maps for Python, MATLAB, R and more</h3>
+		</div>
 	</div>
 	<div class="container">
 			<div class="row api-sect-padding">
