--- a/_posts/ggplot2/facets/2015-07-15-facet-and-geom-point.html
+++ b/_posts/ggplot2/facets/2015-07-15-facet-and-geom-point.html
@@ -1,5 +1,5 @@
 ---
-name: facet_wrap and stat_smooth 
+name: <code>facet_wrap</code> and <code>stat_smooth</code>
 plot_url: https://plot.ly/~MattSundquist/17011
 language: ggplot2
 suite: facets
