--- a/_posts/ggplot2/geom_bar/bar2015-07-14-geom_bar_ggplot2_index.html
+++ b/_posts/ggplot2/geom_bar/bar2015-07-14-geom_bar_ggplot2_index.html
@@ -2,7 +2,7 @@
 title: ggplot2 Geom Bar | Examples | Plotly
 name: Bar Charts
 permalink: ggplot2/geom_bar/
-description: How to make a bar chart in ggplot2. Examples of grouped, stacked, overlaid, and colored bar charts.
+description: How to make a bar chart in ggplot2 using geom_bar. Examples of grouped, stacked, overlaid, filled, and colored bar charts.
 layout: base
 thumbnail: /images/bar.png
 language: ggplot2
