divid to "myDiv"

--- a/_posts/plotly_js/annotations/2015-04-09-hover-chart-basic.html
+++ b/_posts/plotly_js/annotations/2015-04-09-hover-chart-basic.html
@@ -16,4 +16,4 @@ var data = [
   }
 ];
 var layout = {title: "Hover over the points to see the text"};
-Plotly.plot(divid, data, layout);
+Plotly.plot("myDiv", data, layout);
