--- a/_posts/plotly_js/annotations/2015-04-09-text-chart-styling.html
+++ b/_posts/plotly_js/annotations/2015-04-09-text-chart-styling.html
@@ -36,4 +36,4 @@ var trace2 = {
 };
 var data = [trace1, trace2];
 var layout = {showlegend: false};
-Plotly.plot(divid, data, layout);
+Plotly.plot("myDiv", data, layout);
