--- a/_posts/plotly_js/axes/2015-04-09-axes-range-manual.html
+++ b/_posts/plotly_js/axes/2015-04-09-axes-range-manual.html
@@ -21,4 +21,4 @@ var layout = {
   xaxis: {range: [2, 5]}, 
   yaxis: {range: [2, 5]}
 };
-Plotly.plot(divid, data, layout);
+Plotly.plot("myDiv", data, layout);
