--- a/_posts/plotly_js/bar/2015-04-09-bar-marker-array.html
+++ b/_posts/plotly_js/bar/2015-04-09-bar-marker-array.html
@@ -1,5 +1,5 @@
 ---
-name: Customizing Individual Bar Colors
+name: Customizing In"myDiv"ual Bar Colors
 plot_url: https://plot.ly/~PlotBot/177
 language: plotly_js
 suite: bar
@@ -14,4 +14,4 @@ var data = [
     type: "bar"
   }
 ];
-Plotly.plot(divid, data);
+Plotly.plot("myDiv", data);
