--- a/_posts/plotly_js/bubble-maps/2015-07-11-bubble-map.html
+++ b/_posts/plotly_js/bubble-maps/2015-07-11-bubble-map.html
@@ -6,7 +6,7 @@ suite: bubble-maps
 order: 1
 sitemap: false
 ---
-function scattergeobubbles(divid) {
+function scattergeobubbles("myDiv") {
     var data = [{
         type: 'scattergeo',
         mode: 'markers',
@@ -36,5 +36,5 @@ function scattergeobubbles(divid) {
         }
     };
 
-    Plotly.plot(divid, data, layout);
+    Plotly.plot("myDiv", data, layout);
 }
