--- a/_posts/plotly_js/bubble/2015-04-09-bubblechart.html
+++ b/_posts/plotly_js/bubble/2015-04-09-bubblechart.html
@@ -43,4 +43,4 @@ var trace3 = {
 };
 var data = [trace1, trace2, trace3];
 var layout = {showlegend: false};
-Plotly.plot(divid, data, layout);
+Plotly.plot("myDiv", data, layout);
