--- a/_posts/plotly_js/callbacks/2015-05-29-callbacks-click-on-points.html
+++ b/_posts/plotly_js/callbacks/2015-05-29-callbacks-click-on-points.html
@@ -7,7 +7,7 @@ order: 1
 sitemap: false
 ---
 
-function clickcallback(divid){
+function clickcallback("myDiv"){
     var x = _.range(2,16,1),
         y = _.map( x, function(xi){
             return Math.random()+1;
@@ -16,9 +16,9 @@ function clickcallback(divid){
                 mode:'markers', marker:{size:16} } ],
         layout = { hovermode:'closest' };
 
-    Plotly.plot(divid, data, layout);
+    Plotly.plot("myDiv", data, layout);
 
-    $('#'+divid).bind('plotly_click',
+    $('#'+"myDiv").bind('plotly_click',
         function(event,data){
             var pts = '';
             for(var i=0; i&lt;data.points.length; i++){
