--- a/_posts/plotly_js/callbacks/2015-05-29-callbacks-hover-on-points.html
+++ b/_posts/plotly_js/callbacks/2015-05-29-callbacks-hover-on-points.html
@@ -7,7 +7,7 @@ order: 3
 sitemap: false
 ---
 
-function hovercallback(divid){
+function hovercallback("myDiv"){
     var x = _.range(2,16,1),
         y1 = _.map( x, function(xi){
             return Math.random()+1;
@@ -20,9 +20,9 @@ function hovercallback(divid){
                 { x:x, y:y2, type:'scatter', name:'Trial 2',
                 mode:'markers', marker:{size:16} } ];
 
-    Plotly.plot(divid, data);
+    Plotly.plot("myDiv", data);
 
-    $('#'+divid)
+    $('#'+"myDiv")
         .append('<div id="hoverinfo" style="margin-left:80px;">'+
                 '</div>')
         .bind('plotly_hover', function(event,data){
