--- a/_posts/plotly_js/callbacks/2015-05-29-zoom-callback.html
+++ b/_posts/plotly_js/callbacks/2015-05-29-zoom-callback.html
@@ -7,16 +7,16 @@ order: 2
 sitemap: false
 ---
 
-function zoomcallback(divid){
+function zoomcallback("myDiv"){
     var x = _.range(1,40,1),
         y = _.map( x, function(xi){
             return Math.random()+1;
         }),
         data = [ { x:x, y:y } ];
 
-    Plotly.plot(divid, data);
+    Plotly.plot("myDiv", data);
 
-    $('#'+divid).bind('plotly_relayout',
+    $('#'+"myDiv").bind('plotly_relayout',
         function(event,eventdata){
     console.log('ZOOM!',event,eventdata);
     console.log('x-axis start:', eventdata['xaxis.range[0]']);
