--- a/_posts/plotly_js/choropleth-maps/2015-07-11-choropleth-north-america.html
+++ b/_posts/plotly_js/choropleth-maps/2015-07-11-choropleth-north-america.html
@@ -6,7 +6,7 @@ suite: choropleth-maps
 order: 3
 sitemap: false
 ---
-function choroplethusa(divid) {
+function choroplethusa("myDiv") {
     var data = [{
         type: 'choropleth',
         locationmode: 'USA-states',
@@ -57,5 +57,5 @@ function choroplethusa(divid) {
         },
     };
 
-    Plotly.plot(divid, data, layout);
+    Plotly.plot("myDiv", data, layout);
 }
