--- a/_posts/plotly_js/choropleth-maps/2015-07-11-choropleth-world-robinson.html
+++ b/_posts/plotly_js/choropleth-maps/2015-07-11-choropleth-world-robinson.html
@@ -6,7 +6,7 @@ suite: choropleth-maps
 order: 1
 sitemap: false
 ---
-function choroplethworld(divid) {
+function choroplethworld("myDiv") {
     var data = [{
         type: 'choropleth',
         locationmode: 'country names',
@@ -88,5 +88,5 @@ function choroplethworld(divid) {
         }
     };
 
-    Plotly.plot(divid, data, layout);
+    Plotly.plot("myDiv", data, layout);
 }
