--- a/_posts/plotly_js/error-bar/2015-04-09-error-bar-bar.html
+++ b/_posts/plotly_js/error-bar/2015-04-09-error-bar-bar.html
@@ -30,4 +30,4 @@ var trace2 = {
 };
 var data = [trace1, trace2];
 var layout = {barmode: "group"};
-Plotly.plot(divid, data, layout);
+Plotly.plot("myDiv", data, layout);
