--- a/_posts/plotly_js/histogram2d/2015-04-09-2d-histogram-scatter.html
+++ b/_posts/plotly_js/histogram2d/2015-04-09-2d-histogram-scatter.html
@@ -49,4 +49,4 @@ var trace3 = {
   type: "histogram2d"
 };
 var data = [trace1, trace2, trace3];
-Plotly.plot(divid, data);
+Plotly.plot("myDiv", data);
