--- a/_posts/plotly_js/latex/2015-04-09-latex.html
+++ b/_posts/plotly_js/latex/2015-04-09-latex.html
@@ -23,4 +23,4 @@ var layout = {
   xaxis: {title: "$\sqrt{(n_\text{c}(t|{T_\text{early}}))}$"}, 
   yaxis: {title: "$d, r \text{ (solar radius)}$"}
 };
-Plotly.plot(divid, data, layout);
+Plotly.plot("myDiv", data, layout);
