--- a/_posts/plotly_js/legends/2015-04-09-legend-style.html
+++ b/_posts/plotly_js/legends/2015-04-09-legend-style.html
@@ -30,4 +30,4 @@ var layout = {legend: {
     bordercolor: "#FFFFFF", 
     borderwidth: 2
   }};
-Plotly.plot(divid, data, layout);
+Plotly.plot("myDiv", data, layout);
