--- a/_posts/plotly_js/line_and_scatter/2015-04-09-line-scatter.html
+++ b/_posts/plotly_js/line_and_scatter/2015-04-09-line-scatter.html
@@ -25,4 +25,4 @@ var trace3 = {
   type: "scatter"
 };
 var data = [trace1, trace2, trace3];
-Plotly.plot(divid, data);
+Plotly.plot("myDiv", data);
