--- a/_posts/plotly_js/line_and_scatter/2015-04-09-line-shapes.html
+++ b/_posts/plotly_js/line_and_scatter/2015-04-09-line-shapes.html
@@ -62,4 +62,4 @@ var layout = {legend: {
     font: {size: 16}, 
     yref: "paper"
   }};
-Plotly.plot(divid, data, layout);
+Plotly.plot("myDiv", data, layout);
