--- a/_posts/plotly_js/lines-on-maps/2015-11-07-lines-on-orthographic.html
+++ b/_posts/plotly_js/lines-on-maps/2015-11-07-lines-on-orthographic.html
@@ -6,7 +6,7 @@ suite: lines-on-maps
 order: 1
 sitemap: false
 ---
-function scattergeolines(divid) {
+function scattergeolines("myDiv") {
     var colors = ['rgb(213,62,79)', 'rgb(254,224,139)', 'rgb(102,194,165)'],
     lon = _.range(-180, 180, 0.5),
     data = [];
@@ -52,5 +52,5 @@ function scattergeolines(divid) {
         }
     };
 
-    Plotly.plot(divid, data, layout);
+    Plotly.plot("myDiv", data, layout);
 }
