--- a/_posts/plotly_js/polar/2015-04-09-polar-area-chart.html
+++ b/_posts/plotly_js/polar/2015-04-09-polar-area-chart.html
@@ -42,4 +42,4 @@ var layout = {
   radialaxis: {ticksuffix: "%"}, 
   orientation: 270
 };
-Plotly.plot(divid, data, layout);
+Plotly.plot("myDiv", data, layout);
