--- a/_posts/plotly_js/polar/2015-04-09-polar-line.html
+++ b/_posts/plotly_js/polar/2015-04-09-polar-line.html
@@ -83,4 +83,4 @@ var layout = {
   plot_bgcolor: "rgb(255, 255, 255)", 
   orientation: -90
 };
-Plotly.plot(divid, data, layout);
+Plotly.plot("myDiv", data, layout);
