--- a/_posts/plotly_js/polar/2015-04-09-polar-scatter.html
+++ b/_posts/plotly_js/polar/2015-04-09-polar-scatter.html
@@ -91,4 +91,4 @@ var layout = {
   plot_bgcolor: "rgb(223, 223, 223)", 
   angularaxis: {tickcolor: "rgb(253,253,253)"}
 };
-Plotly.plot(divid, data, layout);
+Plotly.plot("myDiv", data, layout);
