--- a/_posts/plotly_js/subplots/2015-04-09-simple-subplot.html
+++ b/_posts/plotly_js/subplots/2015-04-09-simple-subplot.html
@@ -24,4 +24,4 @@ var layout = {
   yaxis2: {anchor: "x2"}, 
   xaxis2: {domain: [0.55, 1]}
 };
-Plotly.plot(divid, data, layout);
+Plotly.plot("myDiv", data, layout);
