--- a/_posts/plotly_js/annotations/2015-04-09-text-chart-basic.html
+++ b/_posts/plotly_js/annotations/2015-04-09-text-chart-basic.html
@@ -35,4 +35,4 @@ var trace3 = {
 };
 var data = [trace1, trace2, trace3];
 var layout = {showlegend: false};
-Plotly.plot(divid, data, layout);
+Plotly.plot("myDiv", data, layout);
