--- a/_posts/plotly_js/axes/2015-04-09-axes-reversed.html
+++ b/_posts/plotly_js/axes/2015-04-09-axes-reversed.html
@@ -14,4 +14,4 @@ var data = [
   }
 ];
 var layout = {xaxis: {autorange: "reversed"}};
-Plotly.plot(divid, data, layout);
+Plotly.plot("myDiv", data, layout);
