--- a/_posts/plotly_js/bar/2015-04-09-stacked-bar.html
+++ b/_posts/plotly_js/bar/2015-04-09-stacked-bar.html
@@ -20,4 +20,4 @@ var trace2 = {
 };
 var data = [trace1, trace2];
 var layout = {barmode: "stack"};
-Plotly.plot(divid, data, layout);
+Plotly.plot("myDiv", data, layout);
