--- a/_posts/plotly_js/histogram/2015-04-09-overlaid-histogram.html
+++ b/_posts/plotly_js/histogram/2015-04-09-overlaid-histogram.html
@@ -25,4 +25,4 @@ var trace2 = {
 };
 var data = [trace1, trace2];
 var layout = {barmode: "overlay"};
-Plotly.plot(divid, data, layout);
+Plotly.plot("myDiv", data, layout);
