--- a/_posts/plotly_js/histogram/2015-04-09-stacked-histogram.html
+++ b/_posts/plotly_js/histogram/2015-04-09-stacked-histogram.html
@@ -18,4 +18,4 @@ var trace2 = {
 };
 var data = [trace1, trace2];
 var layout = {barmode: "stack"};
-Plotly.plot(divid, data, layout);
+Plotly.plot("myDiv", data, layout);
