--- a/_posts/plotly_js/legends/2015-04-09-legend-visibility.html
+++ b/_posts/plotly_js/legends/2015-04-09-legend-visibility.html
@@ -18,4 +18,4 @@ var trace2 = {
 };
 var data = [trace1, trace2];
 var layout = {showlegend: false};
-Plotly.plot(divid, data, layout);
+Plotly.plot("myDiv", data, layout);
