--- a/_posts/plotly_js/scatter-plot-on-maps/2015-07-11-canadian-cities.html
+++ b/_posts/plotly_js/scatter-plot-on-maps/2015-07-11-canadian-cities.html
@@ -6,7 +6,7 @@ suite: scatter-plots-on-maps
 order: 1
 sitemap: false
 ---
-function scattergeomarkers(divid) {
+function scattergeomarkers("myDiv") {
     // By default, geographic data is loaded asynchronously from
     // the topojson subdirectory located at the root of the plotlyjs directory.
     //
@@ -82,5 +82,5 @@ function scattergeomarkers(divid) {
         }
     };
 
-    Plotly.plot(divid, data, layout);
+    Plotly.plot("myDiv", data, layout);
 }
