--- a/_posts/plotly_js/sizing/2015-04-09-size-margins.html
+++ b/_posts/plotly_js/sizing/2015-04-09-size-margins.html
@@ -27,4 +27,4 @@ var layout = {
   paper_bgcolor: "#7f7f7f", 
   plot_bgcolor: "#c7c7c7"
 };
-Plotly.plot(divid, data, layout);
+Plotly.plot("myDiv", data, layout);
