--- a/_posts/plotly_js/subplots/2015-04-09-stacked-coupled-subplots.html
+++ b/_posts/plotly_js/subplots/2015-04-09-stacked-coupled-subplots.html
@@ -30,4 +30,4 @@ var layout = {
   yaxis2: {domain: [0.33, 0.66]}, 
   yaxis3: {domain: [0.66, 1]}
 };
-Plotly.plot(divid, data, layout);
+Plotly.plot("myDiv", data, layout);
