--- a/_posts/plotly_js/subplots/2015-04-09-stacked-subplots.html
+++ b/_posts/plotly_js/subplots/2015-04-09-stacked-subplots.html
@@ -34,4 +34,4 @@ var layout = {
   yaxis2: {domain: [0.366, 0.633]}, 
   yaxis3: {domain: [0.733, 1]}
 };
-Plotly.plot(divid, data, layout);
+Plotly.plot("myDiv", data, layout);
