--- a/_posts/python/line_and_scatter/2015-05-20-gallery-news.html
+++ b/_posts/python/line_and_scatter/2015-05-20-gallery-news.html
@@ -6,82 +6,132 @@ suite: line_and_scatter
 order: 21
 sitemap: false
 ---
-# Learn about API authentication here: {{BASE_URL}}/python/getting-started
-# Find your api_key here: {{BASE_URL}}/settings/api
+# Learn about API authentication here: https://plot.ly/python/getting-started
+# Find your api_key here: https://plot.ly/settings/api
 
 import plotly.plotly as py
 from plotly.graph_objs import *
 
-country = ['Switzerland (2011)', 'Chile (2013)', 'Japan (2014)', 'United States (2012)', 'Slovenia (2014)', 'Canada (2011)', 'Poland (2010)', 'Estonia (2015)', 'Luxembourg (2013)', 'Portugal (2011)']
-voting_pop = [40, 45.7, 52, 53.6, 54.1, 54.2, 54.5, 54.7, 55.1, 56.6]
-reg_voters = [49.1, 42, 52.7, 84.3, 51.7, 61.1, 55.3, 64.2, 91.1, 58.9]
+title = 'Main Source for News'
 
-trace0 = Scatter(
-    x=voting_pop,
-    y=country,
-    mode='markers',
-    name='Percent of estimated voting age population',
-    marker=Marker(
-        color='rgba(156, 165, 196, 0.95)',
-        line=Line(
-            color='rgba(156, 165, 196, 1.0)',
-            width=1,
-        ),
-        symbol='circle',
-        size=16,
-    )
-)
-trace1 = Scatter(
-    x=reg_voters,
-    y=country,
-    mode='markers',
-    name='Percent of estimated registered voters',
-    marker=Marker(
-        color='rgba(204, 204, 204, 0.95)',
-        line=Line(
-            color='rgba(217, 217, 217, 1.0)',
-            width=1,
-        ),
-        symbol='circle',
-        size=16,
-    )
-)
-data = Data([trace0, trace1])
+labels = ['Television', 'Newspaper', 'Internet', 'Radio']
+
+colors = ['rgba(67,67,67,1)', 'rgba(115,115,115,1)', 'rgba(49,130,189, 1)',
+          'rgba(189,189,189,1)']
+
+mode_size = [2, 2, 4, 2]
+
+line_size = [2, 2, 4, 2]
+
+x_data = [
+    [2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2013],
+    [2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2013],
+    [2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2013],
+    [2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2013],
+]
+
+y_data = [
+    [74, 82, 80, 74, 73, 72, 74, 70, 70, 66, 66, 69],
+    [45, 42, 50, 46, 36, 36, 34, 35, 32, 31, 31, 28],
+    [13, 14, 20, 24, 20, 24, 24, 40, 35, 41, 43, 50],
+    [18, 21, 18, 21, 16, 14, 13, 18, 17, 16, 19, 23],
+]
+
+
+traces = []
+
+for i in range(0, 4):
+    traces.append(Scatter(
+        x=x_data[i],
+        y=y_data[i],
+        mode='lines',
+        line=Line(color=colors[i], width=line_size[i]),
+        connectgaps=True,
+    ))
+
+    traces.append(Scatter(
+        x=[x_data[i][0], x_data[i][11]],
+        y=[y_data[i][0], y_data[i][11]],
+        mode='markers',
+        marker=Marker(color=colors[i], size=12)
+    ))
+
 layout = Layout(
-    title="Votes cast for ten lowest voting age population in OECD countries",
     xaxis=XAxis(
-        showgrid=False,
         showline=True,
-        linecolor='rgb(102, 102, 102)',
-        titlefont=Font(
-            color='rgb(204, 204, 204)'
-        ),
-        tickfont=Font(
-            color='rgb(102, 102, 102)',
-        ),
+        showgrid=False,
+        showticklabels=True,
+        linecolor='rgb(204, 204, 204)',
+        linewidth=2,
         autotick=False,
-        dtick=10,
         ticks='outside',
-        tickcolor='rgb(102, 102, 102)',
-    ),
-    margin=Margin(
-        l=140,
-        r=40,
-        b=50,
-        t=80
-    ),
-    legend=Legend(
-        font=Font(
-            size=10,
+        tickcolor='rgb(204, 204, 204)',
+        tickwidth=2,
+        ticklen=5,
+        tickfont=Font(
+            family='Arial',
+            size=12,
+            color='rgb(82, 82, 82)',
         ),
-        yanchor='middle',
-        xanchor='right',
     ),
-    width=600,
+    yaxis=YAxis(
+        showgrid=False,
+        zeroline=False,
+        showline=False,
+        showticklabels=False,
+    ),
     height=600,
-    paper_bgcolor='rgb(254, 247, 234)',
-    plot_bgcolor='rgb(254, 247, 234)',
-    hovermode='closest',
+    width=600,
+    autosize=False,
+    margin=Margin(
+        autoexpand=False,
+        l=100,
+        r=20,
+        t=110,
+    ),
+    showlegend=False,
 )
-fig = Figure(data=data, layout=layout)
-plot_url = py.plot(fig, filename='lowest-oecd-votes-cast')
+
+annotations = []
+
+# Adding labels
+for y_trace, label, color in zip(y_data, labels, colors):
+
+    # labeling the left_side of the plot
+    annotations.append(Annotation(xref='paper', x=0.05, y=y_trace[0],
+                                  xanchor='right', yanchor='middle',
+                                  text=label + ' {}%'.format(y_trace[0]),
+                                  font=Font(family='Arial',
+                                            size=16,
+                                            color=colors,),
+                                  showarrow=False,))
+    # labeling the right_side of the plot
+    annotations.append(Annotation(xref='paper', x=0.95, y=y_trace[11],
+                                  xanchor='left', yanchor='middle',
+                                  text='{}%'.format(y_trace[0]),
+                                  font=Font(family='Arial',
+                                            size=16,
+                                            color=colors,),
+                                  showarrow=False,))
+# Title
+annotations.append(Annotation(xref='paper', yref='paper', x=0.0, y=1.05,
+                              xanchor='left', yanchor='bottom',
+                              text='Main Source for News',
+                              font=Font(family='Arial',
+                                        size=30,
+                                        color='rgb(37,37,37)'),
+                              showarrow=False,))
+# Source
+annotations.append(Annotation(xref='paper', yref='paper', x=0.5, y=-0.1,
+                              xanchor='center', yanchor='top',
+                              text='Source: PewResearch Center & Storytelling with data',
+                              font=Font(family='Arial',
+                                        size=12,
+                                        color='rgb(150,150,150)'),
+                              showarrow=False,))
+
+layout['annotations'] = annotations
+
+fig = Figure(data=traces, layout=layout)
+plot_url = py.plot(fig, filename='news-source')
+
