--- a/index.html
+++ b/index.html
@@ -72,6 +72,14 @@ permalink: /api/
 							<h6>Plotly R API</h6>
 						</div>
 					</div></a>
+					<a href="/javascript-graphing-library/getting-started/"><div class="two columns categories-apis" onmouseover="movingInImgOp(js_api_img, js_api_text)" onmouseout="movingOutImgOp(js_api_img, js_api_text)">
+						<div id="js_api_img">
+							<img src="http://i.stack.imgur.com/Mmww2.png" alt="Plotly.js">
+						</div>
+						<div id="js_api_text" class="titlecenterapi" style="display:none;">
+							<h6>Plotly.js<br>JavaScript graphing library</h6>
+						</div>
+					</div></a>					
 				</div>
 			</div>
 
@@ -88,7 +96,7 @@ permalink: /api/
 					<a href="/r/"  class="button no_underline centeredsmall">R</a>
 					<a href="/nodejs/"  class="button no_underline centeredsmall">Node.js</a>
 					<a href="/julia/"  class="button no_underline centeredsmall">Julia</a>
-					<a href="https://plot.ly/product/excel-add-in/"  class="button no_underline centeredsmall">Excel</a>
+					<a href="https://store.office.com/plotly-charts-WA104379485.aspx?assetid=WA104379485"  class="button no_underline centeredsmall">Excel App</a>
 					<br>
 					<div>
 						<p>Libraries for scientists, engineers, and programmers who want to graph and share their data.</p>
