--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ permalink: /api/
 							<img src="http://i.stack.imgur.com/Mmww2.png" alt="Plotly.js">
 						</div>
 						<div id="js_api_text" class="titlecenterapi" style="display:none;">
-							<h6>Plotly.js<br>JavaScript graphing library</h6>
+							<h6>Plotly.js</h6>
 						</div>
 					</div></a>					
 				</div>
