--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ permalink: /api/
 					<h3 class="centered">Download free clients for</h3>
 				</div>
 				<div class="row">
-					<a href="/python/getting-started/"><div class="two columns offset-by-three categories-apis" onmouseover="movingInImgOp(pythonapi_img, pythonapi_text)" onmouseout="movingOutImgOp(pythonapi_img, pythonapi_text)">
+					<a href="/python/getting-started/"><div class="two columns offset-by-two categories-apis" onmouseover="movingInImgOp(pythonapi_img, pythonapi_text)" onmouseout="movingOutImgOp(pythonapi_img, pythonapi_text)">
 						<div id="pythonapi_img">
 							<img src="{{site.staticurl}}/images/python-small.png" alt="python">
 						</div>
@@ -74,7 +74,7 @@ permalink: /api/
 					</div></a>
 					<a href="/javascript-graphing-library/getting-started/"><div class="two columns categories-apis" onmouseover="movingInImgOp(js_api_img, js_api_text)" onmouseout="movingOutImgOp(js_api_img, js_api_text)">
 						<div id="js_api_img">
-							<img src="http://i.stack.imgur.com/Mmww2.png" alt="Plotly.js">
+							<img src="http://i.stack.imgur.com/Mmww2.png" alt="Plotly.js" style="max-width:90px;">
 						</div>
 						<div id="js_api_text" class="titlecenterapi" style="display:none;">
 							<h6>Plotly.js</h6>
