suite, seo considerations for title

--- a/_posts/ggplot2/time-series/2015-07-14-time-series_ggplot2_index.html
+++ b/_posts/ggplot2/time-series/2015-07-14-time-series_ggplot2_index.html
@@ -2,7 +2,7 @@
 title: ggplot2 Time Series | Examples | Plotly
 name: Line and Scatter Plots
 permalink: ggplot2/time-series/
-description: How to make line and scatter plots in ggplot2. Seven examples of basic and colored line and scatter plots.
+description: How to make time series plots in ggplot2. 
 layout: base
 thumbnail: /images/time-series.png
 language: ggplot2
