Update and rename _posts/ggplot2/facets/2015-07-15-facet-time-series.html to _posts/ggplot2/time-series/2015-07-15-facet-time-series.html

--- a/_posts/ggplot2/time-series/2015-07-15-facet-time-series.html
+++ b/_posts/ggplot2/time-series/2015-07-15-facet-time-series.html
@@ -1,10 +1,10 @@
 ---
-name: facets with time series 
+name: time series with <code>facet_grid</code>
 plot_url: https://plot.ly/~MattSundquist/17050
 language: ggplot2
-suite: facets
+suite: time-series
 description: Inspired by <a href="http://docs.ggplot2.org/current/scale_date.html">ggplot2 docs</a>.
-order: 14
+order: 2
 sitemap: false
 ---
 # Learn about API authentication here: https://plot.ly/ggplot2/getting-started
